# CrewAI-Agentic-Chat

./: .gitignore  README.md  pyproject.toml  report.md
src/crew_chat/: crew.py  main.py
src/crew_chat/config/: agents.yaml  tasks.yaml
src/crew_chat/tools/: weaviate_tool.py
